fixes and change py version

--- a/week03_candgen/practice.ipynb
+++ b/week03_candgen/practice.ipynb
@@ -449,7 +449,7 @@
    "metadata": {},
    "source": [
     "#### KNN Candidate Generator\n",
-    "Let's write a lightweight, but actually usable candidate generator! It will be a kNN search, where distance metric is dot-product and closer to 1 is better. This is essentially really useful when you train models to predict score with dot-product of two embedding, just as our ALS model.\n",
+    "Let's write a lightweight, but actually usable candidate generator! It will be a kNN search, where distance metric is dot-product and bigger is better. This is essentially really useful when you train models to predict score with dot-product of two embedding, just as our ALS model.\n",
     "\n",
     "A small description:\n",
     "- Initialization requires `left_embeddings` (user or item ones) and `right_embeddings` (item ones).\n",
@@ -585,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seems to be working and actually is not a bad way to add diversity to your candidates or encourage item exploration, because this candidate is not affected by feedback loop."
+    "Seems to be working and actually is not a bad way to add diversity to your candidates or encourage item exploration, because this CG will for example help with feedback loop."
    ]
   },
   {
@@ -643,7 +643,7 @@
     "\n",
     "We will be optimizing MSE between true values and predictions, but with regularization:\n",
     "$$\n",
-    "L = \\sum_{(u, i) \\in R} (\\hat{r}_{ui} - r_{ui} - b_{u} - b_{i})^2 + \\lambda_{emb} \\left(\\sum_{u \\in U} \\|p_u\\|^2 + \\sum_{i \\in I} \\|q_i\\|^2\\right) + \\lambda_{bias} \\left(\\sum_{u \\in U} b_u^2 + \\sum_{i \\in I} b_i^2\\right)\n",
+    "L = \\sum_{(u, i) \\in R} (\\hat{r}_{ui} - r_{ui})^2 + \\lambda_{emb} \\left(\\sum_{u \\in U} \\|p_u\\|^2 + \\sum_{i \\in I} \\|q_i\\|^2\\right) + \\lambda_{bias} \\left(\\sum_{u \\in U} b_u^2 + \\sum_{i \\in I} b_i^2\\right)\n",
     "$$\n",
     "\n",
     "Assuming you've heard about the model during lecture on candidate generation, we're now going to:\n",
