--- a/week03_candgen/homework/homework.ipynb
+++ b/week03_candgen/homework/homework.ipynb
@@ -494,7 +494,7 @@
    "outputs": [],
    "source": [
     "@nb.njit\n",
-    "def optimizer_step(user_vectors, item_vectors, item_biases, user_idx, pos_item_idx, neg_item_idx, lr, lambd):\n",
+    "def optimizer_step(user_vectors, item_vectors, user_idx, pos_item_idx, neg_item_idx, lr, lambd):\n",
     "    \"\"\"Optimization step for BPR model\n",
     "    1. Calculate the dot-product scores for the positive and negative items.\n",
     "    2. Apply sigmoid function to the difference of the scores to get P(u, i > j).\n",
@@ -504,7 +504,6 @@
     "    Args:\n",
     "        user_vectors (np.ndarray[n_users, dim]): User embeddings.\n",
     "        item_vectors (np.ndarray[n_items, dim]): Item embeddings.\n",
-    "        item_biases (np.ndarray[n_items, 1]): Item biases.\n",
     "        user_idx (int): User index.\n",
     "        pos_item_idx (int): Positive item index.\n",
     "        neg_item_idx (int): Negative item index.\n",
