additions to hw

--- a/week05_neural_ranking/homework/homework.ipynb
+++ b/week05_neural_ranking/homework/homework.ipynb
@@ -12,6 +12,80 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76980893",
+   "metadata": {},
+   "source": [
+    "## 0.1 Changelog\n",
+    "- Исправлены небольше опечатки в \"3. (1 балл) Подготовка данных для pretrain\".\n",
+    "- Исправлены небольше опечатки в \"6. (2 балл) Реализуем pretrain модель\".\n",
+    "\n",
+    "## 0.2 Ответы на частые вопросы и дополнительные пояснения.\n",
+    "\n",
+    "1. При реализации `ContextEncoder`, `ItemEncoder`, `ActionEncoder` можно добавить параметр в `__init__` и чуть поменять тесты. Размерности в тестах не соотвествует настоящим, их вам нужно найти.\n",
+    "2. `ensure_sorted_by_timestamp` нужно использовать в `PretrainMapper`, `FinetuneTrainMapper`, `FinetuneValidMapper`.\n",
+    "3. В домашней работе с батчами работаем в unpadded режиме, то есть батч из двух историй `[1, 2, 3], [4, 5]` будет храниться в виде `{'history': [1, 2, 3, 4, 5], 'lengths': [3, 2]}`. \n",
+    "4. Для кодирования позиций используйте абсолютные позиционные вектора. Для них как раз поле `position` и нужно.\n",
+    "5. В `PretrainModel` открывается строчка `offsets = torch.cumsum(lengths, dim=0)`.\n",
+    "6. В `PretrainModel` свойство `temperature` дано не просто так.\n",
+    "7. Про `FinetuneMapper` подробнее:\n",
+    "\n",
+    "    Есть пользователь u. У него есть некоторая история этих позитивных взаимодействий h_1, ..., h_n. Каждое из них произошло в моменты t_1, ..., t_n. Мы из всей этой истории оставляем последние 512 событий. Далее есть последовательность реквестов для этого же пользователя. Один реквест представляет из себя набор товаров, каждый из которых либо был добавлен в корзину, либо был просто просмотрен. Одному такому реквесту соответствует один таймстемп (смотри таблицы train_targets/valid_targets). Пусть последовательность реквестов для этого пользователя имеет вид: (i_11, i_12, ..., ), (i_21, i_22, ...), ..., (i_k1, i_k2, ...), то есть пусть их будет k. Мы опять здесь из k оставляем последние 512 событий (см. class Candidates и требования на него). Пусть каждый из этих реквестов произошел на моменты времени tau_1, ..., tau_k. Тогда для одного пользователя обучающий семпл выглядит как: \n",
+    "\n",
+    "    {\n",
+    "        'history': {...},\n",
+    "        'candidates': {...}\n",
+    "    }\n",
+    "\n",
+    "    То есть он прям один. Как сделать так, чтобы каждому реквесту соответствовала  своя история. У нас есть последние 512 исторических событий и последние 512 реквестов. Для каждого реквеста с tau_i нужно найти такой t_j, что будет выполнено условие на lag (случайная задержка). Еще в докстринге есть такая фраза: filters candidates based on time constraints. То есть может быть такое, что таких t_j не существует, тогда такие реквесты просто выкидываются. Как раз за вот это соответствие tua <-> t targets_inds в данном случае отвечают.\n",
+    "\n",
+    "    Рассмотрим такой обучающий пример: \n",
+    "\n",
+    "    {\n",
+    "        'history': {\n",
+    "            'source_type': [1, 1, 2, 3, 4],\n",
+    "            'action_type': [1, 0, 1, 0, 1],\n",
+    "            'product_id': [1, 2, 3, 4, 5],\n",
+    "            'position': [0, 1, 2, 3, 4],\n",
+    "            'targets_inds': [0, 1, 2],\n",
+    "            'targets_lengths': [3],\n",
+    "            'lengths': [5]\n",
+    "        },\n",
+    "        'candidates': {\n",
+    "            'source_type': [1, 2, 3],\n",
+    "            'action_type': [1, 0, 1, 0, 1, 0, 1, 1, 1],\n",
+    "            'product_id': [10, 20, 30, 40, 50, 60, 70, 80, 90],\n",
+    "            'lengths': [3, 3, 3],\n",
+    "            'num_requests': 3\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    Для простоты оставим ток product_id:\n",
+    "\n",
+    "    {\n",
+    "        'history': {\n",
+    "            'product_id': [1, 2, 3, 4, 5],\n",
+    "            'targets_inds': [0, 1, 2],\n",
+    "            'targets_lengths': [3],\n",
+    "            'lengths': [5]\n",
+    "        },\n",
+    "        'candidates': {\n",
+    "            'product_id': [10, 20, 30, 40, 50, 60, 70, 80, 90],\n",
+    "            'lengths': [3, 3, 3],\n",
+    "            'num_requests': 3\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    Это значит, что для первого request_id будет история [1] (т.к. targets_inds[0] = 0), для второго request_id история будет [1, 2], для третьего [1, 2, 3]. То есть дальше это будет выглядеть так. Ты подашь эту последовательность в трансформер, заберешь по targets_inds выходы трансформера (как раз состояния пользователя на моменты времени 0, 1, 2, которые и являются актуальными для этих request-ов соотвественно). Как итог, за один проход трансформера ты получишь необходимые состояния пользователя сразу для всех его request-ов\n",
+    "\n",
+    "    Актуальность (то есть как раз эти targets_inds) и есть ваша задача определить в Mapper-е.\n",
+    "\n",
+    "    1. История (в смысле поле history кроме targets_inds) фиксированна для пользователя и не зависит от кандидатов\n",
+    "    2. targets_inds определяют позиции в истории для каждого кандидата и заполняются параллельно с candidates (num_requests == targets_length)\n",
+    "    3. что кандидаты <--> request_ids, но это я просто сам забыл с начала нотбука"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eb271239",
    "metadata": {},
    "source": [
@@ -361,7 +435,7 @@
     "\n",
     "Схема для history имеет вид: \n",
     "```python\n",
-    "HISTORY_SCHEMA = pl.Struct({\n",
+    "HISTORY_SCHEMA = pl.Struct([{\n",
     "    'source_type': pl.List(pl.Int64), \n",
     "    'action_type': pl.List(pl.Int64),\n",
     "    'product_id': pl.List(pl.Int64),\n",
@@ -369,12 +443,12 @@
     "    'targets_inds': pl.List(pl.Int64),\n",
     "    'targets_lengths': pl.List(pl.Int64), # количество таргет событий в истории\n",
     "    'lengths': pl.List(pl.Int64), # длина всей истории \n",
-    "}).\n",
+    "}]).\n",
     "```\n",
     "`position` это индексы событий в истории (нужно будут далее для позиционных эмбеддингов), `targets_inds` - индексы тех позиций, которые будут участвовать в подсчете функции потерь. Они нужны, чтобы разделять потерю по событиям из обучающий и валидационной частей. `targets_lengths` - количество таких событий в истории. \n",
     "Пример: Пусть есть некоторый пользователь с историей из позитивных взаимодействий длины 5. Пусть первые 3 события попадают в обучение, а последние 2 в валидацию. Тогда:\n",
     "```python\n",
-    "history_train_sample = pl.DataFrame({\n",
+    "history_train_sample = pl.DataFrame([{\n",
     "    'source_type': [1, 1, 2, 3, 4],\n",
     "    'action_type': [1, 0, 1, 0, 1],\n",
     "    'product_id': [1, 2, 3, 4, 5],\n",
@@ -382,8 +456,8 @@
     "    'targets_inds': [0, 1, 2],\n",
     "    'targets_lengths': [3],\n",
     "    'lengths': [5]\n",
-    "})\n",
-    "history_valid_sample = pl.DataFrame({\n",
+    "}])\n",
+    "history_valid_sample = pl.DataFrame([{\n",
     "    'source_type': [1, 1, 2, 3, 4],\n",
     "    'action_type': [1, 0, 1, 0, 1],\n",
     "    'product_id': [1, 2, 3, 4, 5],\n",
@@ -391,7 +465,7 @@
     "    'targets_inds': [3, 4],\n",
     "    'targets_lengths': [2],\n",
     "    'lengths': [5]\n",
-    "})\n",
+    "}])\n",
     "```"
    ]
   },
@@ -1000,22 +1074,22 @@
     "Обозначения:  \n",
     "- $u_i \\in \\mathbb{R}^D$ – нормализованный вектор пользователя для i-го примера.  \n",
     "- $c_i \\in \\mathbb{R}^D$ – нормализованный вектор кандидата (позитивного товара) для i-го примера.  \n",
-    "- $\\{n_{ij}\\}_{j=1}^M\\subset\\mathbb{R}^D$ – нормализованные векторы $M$ негативных товаров (весь каталог товаров).  \n",
-    "- $\\tau>0$ – «температура» (скаляр).  \n",
-    "- $K= M+1$ – общее число кандидатов (1 позитивный + M негативных).\n",
+    "- $\\{n_{ij}\\}_{j=1}^M\\subset\\mathbb{R}^D$ – нормализованные векторы $M$ негативных товаров (весь каталог товаров минус один товар, позитивный).  \n",
+    "- $\\text{temp}>0$ – «температура» (скаляр).  \n",
+    "- $K= M+1$ – общее число кандидатов (1 позитивный + M негативных). Количество товаров во всем каталоге будет $1 + M$.\n",
     "\n",
     "1. **Retrieval loss** (контрастивный softmax-лосс)  \n",
     "   Для каждого примера $i$ вычисляем скалярные логиты:  \n",
     "   $$\n",
     "     \\ell_i = [\\,\\underbrace{u_i^\\top c_i}_{\\text{позитивный логит}} \\,\\big|\\,\n",
-    "               \\underbrace{u_i^\\top n_{i1},\\,u_i^\\top n_{i2},\\,\\dots,\\,u_i^\\top n_{iM}}_{\\text{негативные логиты}}] \\;\\times\\;\\tau\n",
+    "               \\underbrace{u_i^\\top n_{i1},\\,u_i^\\top n_{i2},\\,\\dots,\\,u_i^\\top n_{iM}}_{\\text{негативные логиты}}] \\;\\times\\;\\\\text{temp}\n",
     "   $$\n",
     "   Затем лосс  \n",
     "   $$\n",
     "     \\mathcal{L}_{\\mathrm{retr}} \n",
-    "     = -\\frac1N \\sum_{i=1}^N \\log\\frac{\\exp\\bigl(u_i^\\top c_i \\,\\tau\\bigr)}\n",
-    "                                      {\\exp\\bigl(u_i^\\top c_i \\,\\tau\\bigr)\n",
-    "                                     + \\sum_{j=1}^M \\exp\\bigl(u_i^\\top n_{ij}\\,\\tau\\bigr)}.\n",
+    "     = -\\frac1N \\sum_{i=1}^N \\log\\frac{\\exp\\bigl(u_i^\\top c_i \\,\\text{temp}\\bigr)}\n",
+    "                                      {\\exp\\bigl(u_i^\\top c_i \\,\\text{temp}\\bigr)\n",
+    "                                     + \\sum_{j=1}^M \\exp\\bigl(u_i^\\top n_{ij}\\,\\text{temp}\\bigr)}.\n",
     "   $$\n",
     "\n",
     "2. **Action loss** (кросс-энтропия)  \n",
@@ -1035,7 +1109,7 @@
     "   Перевзвешиваем action часть т.к. у нее сильно меньше масштаб.\n",
     "\n",
     "#### Подсказки\n",
-    "Используйте `tensor.roll` и `tensor.log_softmax`, `torch.repeat_interleave`."
+    "Используйте `tensor.roll` и `torch.logsumexp`, `torch.repeat_interleave`."
    ]
   },
   {
@@ -2140,7 +2214,7 @@
    "source": [
     "## 11. Оцениваем качество в CatBoost и пробуем в контесте (этот пункт не оценивается)\n",
     "\n",
-    "- Аналогично тому, как в домашнtv задании мы получали логиты для валидации, можно сгенерировать логиты и на тестовом наборе из контеста. После этого получившийся скаляр присоединяется к фичам CatBoost для трейна и теста:  \n",
+    "- Аналогично тому, как в домашнем задании мы получали логиты для валидации, можно сгенерировать логиты и на тестовом наборе из контеста. После этого получившийся скаляр присоединяется к фичам CatBoost для трейна и теста:  \n",
     "    ```python\n",
     "    train_catboost = train_catboost.join(\n",
     "        argus_score,\n",
